fixed spacing on 'environment' (#13)
* fixed spacing on 'environment'

* added sans-serif to font family

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -5,7 +5,7 @@
 }
 
 .header {
-  font-family: "Montserrat";
+  font-family: "Montserrat", sans-serif;
   text-align: center;
   color: $headerGray;
   letter-spacing: 5px;
