--- a/src/components/TracksBox/TracksBox.scss
+++ b/src/components/TracksBox/TracksBox.scss
@@ -52,7 +52,7 @@
 	}
 
 	.heading > p {
-		padding: 2vw 4vw;
+		padding: 2vw 1.5vw;
 	}
 
 }
